scratch/oxcaml_research/concurrency_model/h3_hardening/t5_cause_portable/results/compile.out
== die_positive (pass) ==
die_positive materialized=true
PASS expected-pass die_positive
== fail_positive (pass) ==
fail_positive immutable_typed_payload=true
PASS expected-pass fail_positive
== interrupt_positive (pass) ==
interrupt_positive portable_interrupt=true
PASS expected-pass interrupt_positive
== concurrent_positive (pass) ==
concurrent_positive sibling_count=2
PASS expected-pass concurrent_positive
== suppressed_positive (pass) ==
suppressed_positive primary_and_finalizer=true
PASS expected-pass suppressed_positive
== open_polyvariant_error_negative (fail) ==
File "scratch/oxcaml_research/concurrency_model/h3_hardening/t5_cause_portable/open_polyvariant_error_negative.ml", line 3, characters 38-62:
3 | let cause = Effet.Cause.Portable.Fail (`Worker_failed "typed")
                                          ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type "[> `Worker_failed of string ]"
       but an expression was expected of type "('a : value mod portable)"
       The kind of [> `Worker_failed of string ] is value mod non_float
         because it's a polymorphic variant type.
       But the kind of [> `Worker_failed of string ] must be a subkind of 
           value mod portable.
PASS expected-fail open_polyvariant_error_negative
== closure_payload_negative (fail) ==
File "scratch/oxcaml_research/concurrency_model/h3_hardening/t5_cause_portable/closure_payload_negative.ml", line 3, characters 38-54:
3 | let cause = Effet.Cause.Portable.Fail (fun x -> x + 1)
                                          ^^^^^^^^^^^^^^^^
Error: 
       The kind of 'a -> 'b is value mod aliased immutable non_float
         because it's a function type.
       But the kind of 'a -> 'b must be a subkind of value mod portable.
PASS expected-fail closure_payload_negative
== raw_cause_negative (fail) ==
File "scratch/oxcaml_research/concurrency_model/h3_hardening/t5_cause_portable/raw_cause_negative.ml", line 15, characters 48-51:
15 |          Parallel.fork_join2 parallel (fun _ -> raw) (fun _ -> raw))))
                                                     ^^^
Error: The value "raw" is "nonportable"
       but is expected to be "shareable"
         because it is used inside the function at file "scratch/oxcaml_research/concurrency_model/h3_hardening/t5_cause_portable/raw_cause_negative.ml", lines 14-15, characters 48-68
         which is expected to be "shareable".
PASS expected-fail raw_cause_negative
summary: pass=8 fail=0
